--- a/ese2020-project-scaffolding-master/frontend/src/index.html
+++ b/ese2020-project-scaffolding-master/frontend/src/index.html
@@ -5,7 +5,7 @@
   <title>ESE2020 - Frontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/icons/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://kit.fontawesome.com/6ce6aa1de7.js" crossorigin="anonymous"></script>
